tests/ui/inference/cannot-infer-closure-circular.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot-infer-closure-circular.rs:9:9
   |
LL |         Ok(v)
   |         ^^ cannot infer type of the type parameter `E` declared on the enum `Result`
   |
help: consider specifying the generic arguments
   |
LL |         Ok::<(), E>(v)
   |           +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
